Fix mobile guide z-index

--- a/LightTube/wwwroot/css/lighttube.css
+++ b/LightTube/wwwroot/css/lighttube.css
@@ -341,6 +341,7 @@ a {
         bottom: 0;
         left: 0;
         right: 0;
+        z-index: 50;
     }
 
     .app {
